[package]
name = "smartsheet-rs"
version = "0.1.0"
description = "Async Smartsheet API implementation in Rust"
repository = "https://github.com/rnag/smartsheet-rs"
authors = ["Ritvik Nag <rv.kvetch@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["smartsheet",
            "api",
            "async",
            "smartsheet-api",
            "client"]
categories = ["api-bindings"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.16" ,features = ["client", "http1"] }
hyper-tls = "0.5.0"
futures = { version = "0.3.19", features = ["async-await"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.78"
# serde_json = { version = "1.0.78", default-features = false, features = ["alloc"] }
log = "0.4.14"

[dev-dependencies]
version-sync = "0.9.4"  # to ensure versions in `Cargo.toml` and `README.md` are in sync
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4.0"
tabled = "0.4.2"  # for pretty-printing response data in the examples
