[package]
name = "smartsheet-rs"
version = "0.2.0"
description = "Async Smartsheet API implementation in Rust"
repository = "https://github.com/rnag/smartsheet-rs"
authors = ["Ritvik Nag <rv.kvetch@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["smartsheet",
            "api",
            "async",
            "smartsheet-api",
            "client"]
categories = ["api-bindings"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rust-tls"]  # this is optimal for Linux (AWS Lambda) environments
rust-tls = ["hyper-rustls", "rustls"]
native-tls = ["hyper-tls"]

[dependencies]
hyper = { version = "0.14.16" ,features = ["runtime", "client", "http2", "tcp"] }
hyper-rustls = { version = "0.23.0", optional = true, default-dependencies = false, features=["native-tokio", "tls12", "http2"] }
# hyper-rustls = { version = "0.23.0", optional = true, default-dependencies = false }
rustls = { version = "0.20.1", optional = true, default-features = false }
# rustls-native-certs = { version = "0.6", optional = true }
hyper-tls = { version = "0.5.0", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
# serde_json = { version = "1.0.78", default-features = false, features = ["alloc"] }
log = "0.4.14"

[dev-dependencies]
version-sync = "0.9.4"  # to ensure versions in `Cargo.toml` and `README.md` are in sync
cargo-bump = "1.1.0"  # to bump package version and tag a commit at the same time
futures-util = { version = "0.3", default-features = false, features=["async-await"] }
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4.0"
tabled = "0.4.2"  # for pretty-printing response data in the examples

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
